# NTO_classificator

./: NN.ipynb  Readme.md  network.pth  pyproject.toml  sample_submission.csv
